<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:stretchColumns="1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="1.0"
            android:background="#222222">

            <!-- As more features get added this scrollView will manage the view -->
            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_span="4">

                <!-- Used to organize the breakdown of information into columns -->
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:stretchColumns="1">

                    <TableRow
                        android:layout_width="fill_parent">
                        <TextView
                            android:text="@string/menu_url_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:editable="false"
                            android:textColor="@color/text_on_black"/>

                        <EditText
                            android:id="@+id/menu_url_address"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:hint="Type URL here"
                            android:textColor="@color/text_on_black"
                            android:textColorHint="@color/text_on_black"
                            android:inputType="textUri"/>
                    </TableRow>

                    <TableRow>
                        <TextView
                            android:text="@string/menu_web_zoom"
                            android:textColor="@color/text_on_black"/>
                        <EditText
                            android:id="@+id/page_zoom_size"
                            android:layout_width="wrap_content"
                            android:textColor="@color/text_on_black"
                            android:inputType="number"/>
                    </TableRow>

                    <TableRow>
                        <TextView
                            android:text="@string/menu_font_zoom"
                            android:textColor="@color/text_on_black"/>
                        <EditText
                            android:id="@+id/font_zoom_size"
                            android:layout_width="wrap_content"
                            android:textColor="@color/text_on_black"
                            android:inputType="number"/>
                    </TableRow>

                    <TableRow>
                        <TextView
                            android:text="@string/menu_orientation"
                            android:textColor="@color/text_on_black"/>
                        <EditText
                            android:id="@+id/webpage_rotation"
                            android:layout_width="wrap_content"
                            android:textColor="@color/text_on_black"
                            android:inputType="numberDecimal"/>
                    </TableRow>

                </TableLayout>


            </ScrollView>


        </TableRow>


        <!-- Buttons at the bottom for saving and canceling setting updates -->
        <TableRow
            android:background="#000000"
            android:gravity="right">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_button_save"
                android:id="@+id/save_button"
                android:textColor="@color/text_on_black"
                android:layout_column="2"
                android:onClick="updateSettings"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_button_cancel"
                android:id="@+id/cancel_button"
                android:textColor="@color/text_on_black"
                android:layout_column="3"
                android:onClick="goBack"/>
        </TableRow>

        </TableLayout>



</RelativeLayout>